<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cric"
    android:fillViewport="true"
    tools:context="com.example.vineetprasadverma.scorekeeper_cricket.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/league_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/twelve_dp"
            android:fontFamily="monospace"
            android:text="@string/leaguename"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_four_sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/league_name"
            android:layout_centerHorizontal="true"
            android:fontFamily="monospace"
            android:text="@string/Target"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_four_sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/target"
            android:layout_centerHorizontal="true"
            android:fontFamily="monospace"
            android:text="@string/matchOver"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/one_hundred_ten_dp"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:gravity="center"
                    android:paddingTop="@dimen/sixteen_dp"
                    android:text="@string/batting_team"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fourteen_sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/batting_team_runs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/sixteen_dp"
                        android:fontFamily="monospace"
                        android:gravity="center"
                        android:paddingLeft="@dimen/ten_dp"
                        android:paddingRight="@dimen/ten_dp"
                        android:text="@string/runs_scored"
                        android:textColor="@color/white"
                        android:textSize="@dimen/fifty_four"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/sixteen_dp"
                        android:fontFamily="monospace"
                        android:gravity="center"
                        android:text="/"
                        android:textColor="@color/white"
                        android:textSize="@dimen/fifty_four"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/wicket"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/sixteen_dp"
                        android:fontFamily="monospace"
                        android:gravity="center"
                        android:text="@string/fallofwicket"
                        android:textColor="@color/white"
                        android:textSize="@dimen/fifty_four"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="monospace"
                    android:text="@string/runs"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/eight_dp"
                    android:layout_marginLeft="@dimen/twenty_four_dp"
                    android:layout_marginRight="@dimen/twenty_four_dp"
                    android:fontFamily="monospace"
                    android:onClick="add6ForBattingTeam"
                    android:text="@string/sixruns"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/eight_dp"
                    android:layout_marginLeft="@dimen/twenty_four_dp"
                    android:layout_marginRight="@dimen/twenty_four_dp"
                    android:fontFamily="monospace"
                    android:onClick="add4ForBattingTeam"
                    android:text="@string/fourruns"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/eight_dp"
                    android:layout_marginLeft="@dimen/twenty_four_dp"
                    android:layout_marginRight="@dimen/twenty_four_dp"
                    android:fontFamily="monospace"
                    android:onClick="add1ForBattingTeam"
                    android:text="@string/oneruns"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/ten_dp"
                android:layout_marginTop="@dimen/sixteen_dp"
                android:background="@android:color/white"

                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:gravity="center"
                    android:paddingTop="@dimen/sixteen_dp"
                    android:text="@string/bowling_team"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fourteen_sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bowling_team_bowled"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:gravity="center"
                    android:paddingTop="@dimen/sixteen_dp"
                    android:text="@string/bowls_bowled"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fifty_four"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/bowls"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/eight_dp"
                    android:layout_marginLeft="@dimen/twenty_four_dp"
                    android:layout_marginRight="@dimen/twenty_four_dp"
                    android:fontFamily="monospace"
                    android:onClick="add1BowlForBowlingTeam"
                    android:text="@string/nextball"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/eight_dp"
                    android:layout_marginLeft="@dimen/twenty_four_dp"
                    android:layout_marginRight="@dimen/twenty_four_dp"
                    android:fontFamily="monospace"
                    android:onClick="addOneForBattingTeam"
                    android:text="@string/illegalball"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/eight_dp"
                    android:layout_marginLeft="@dimen/twenty_four_dp"
                    android:layout_marginRight="@dimen/twenty_four_dp"
                    android:fontFamily="monospace"
                    android:onClick="addWicket"
                    android:text="@string/wicket"
                    android:textColor="@color/black"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/winner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/reset_button"
            android:layout_centerHorizontal="true"
            android:fontFamily="monospace"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_four_sp" />

        <Button
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/sixteen_dp"
            android:fontFamily="monospace"
            android:onClick="reset"
            android:text="@string/reset"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </RelativeLayout>
</ScrollView>

